--- a/cjoli.Server/wwwroot/locales/translation-fr.json
+++ b/cjoli.Server/wwwroot/locales/translation-fr.json
@@ -21,7 +21,7 @@
     "refresh": "Actualiser",
     "refreshEstimate": "Actualiser l'estimation",
     "custom": "Personnalisé",
-    "useCustom": "Utiliser personnalisé",
+    "useCustom": "utiliser l'estimation personnel",
     "menu": "Menu"
   },
   "error": {
