--- a/cjoli.Server/wwwroot/locales/translation-en.json
+++ b/cjoli.Server/wwwroot/locales/translation-en.json
@@ -8,7 +8,9 @@
     "de": "Deutsch"
   },
   "user": {
-    "guest": "Guest"
+    "guest": "Guest",
+    "favoriteSaved": "Favorite team saved",
+    "favoriteRemoved": "Favorite team removed"
   },
   "menu": {
     "home": "Home",
@@ -87,6 +89,7 @@
       "youngest": "Youngest (date)",
       "name": "Name",
       "shortName": "Short Name",
+      "fullName": "Full Name",
       "alias": "Alias"
     },
     "error": {
