--- a/cjoli.Server/wwwroot/locales/translation-fr.json
+++ b/cjoli.Server/wwwroot/locales/translation-fr.json
@@ -149,7 +149,9 @@
     "first": "1er",
     "second": "2ème",
     "third": "3ème",
-    "rankth": "{{rank}}ème"
+    "rankth": "{{rank}}ème",
+    "users": "Utilisateurs",
+    "score": "Score"
   },
   "select": {
     "live": "En direct",
