add memory cache

--- a/cjoli.Server/wwwroot/locales/translation-en.json
+++ b/cjoli.Server/wwwroot/locales/translation-en.json
@@ -25,7 +25,7 @@
     "useCustom": "use personal estimate",
     "menu": "Menu",
     "setting": "Setting",
-    "admin": "Administration",
+    "admin": "Administration"
   },
   "home": {
     "tourneyNotConfigured": "Tourney not configured"
