test first version

--- a/cjoli.Server/wwwroot/locales/translation-pt.json
+++ b/cjoli.Server/wwwroot/locales/translation-pt.json
@@ -1,5 +1,5 @@
 {
-  "title": "CJoli - Torneio de Hóquei no Gelo",
+  "title": "Hóquei no Gelo",
   "lang": {
     "en": "Inglês",
     "fr": "Francês",
