--- a/cjoli.Server/wwwroot/locales/translation-de.json
+++ b/cjoli.Server/wwwroot/locales/translation-de.json
@@ -1,5 +1,5 @@
 {
-  "title": "CJoli - Eishockeyturnier",
+  "title": "Eishockeyturnier",
   "lang": {
     "en": "Englisch",
     "fr": "Französisch",
