--- a/cjoli.Server/wwwroot/locales/translation-es.json
+++ b/cjoli.Server/wwwroot/locales/translation-es.json
@@ -1,5 +1,5 @@
 {
-  "title": "CJoli - Torneo de Hockey sobre Hielo",
+  "title": "Hockey sobre Hielo",
   "lang": {
     "en": "Inglés",
     "fr": "Francés",
