add nl language

--- a/cjoli.Server/wwwroot/locales/translation-en.json
+++ b/cjoli.Server/wwwroot/locales/translation-en.json
@@ -5,7 +5,8 @@
     "fr": "French",
     "pt": "Portuguese",
     "es": "Spanish",
-    "de": "Deutsch"
+    "de": "Deutsch",
+    "nl": "Dutch"
   },
   "user": {
     "guest": "Guest",
