--- a/cjoli.Server/wwwroot/locales/translation-fr.json
+++ b/cjoli.Server/wwwroot/locales/translation-fr.json
@@ -5,7 +5,8 @@
     "fr": "Français",
     "pt": "Portugais",
     "es": "Espagnol",
-    "de": "Allemand"
+    "de": "Allemand",
+    "nl": "Hollandais"
   },
   "user": {
     "guest": "Invité",
